# Content-Generation-Pipeline

./: README.md  evals.ipynb  pyproject.toml
.github/workflows/: ci.yml
fixtures/: manifest.json
fixtures/generations/: cottage.json  villa.json
logs/: 2026-06-17T07-16-57-00-00_generation-eval_HJ7vzgT5oiZZdvosHrGsjb.eval  2026-06-17T07-17-20-00-00_meta-eval_XtKNoHAXviw4kkLVXqtoZJ.eval  2026-06-17T18-56-05-00-00_generation-eval_emsGLjAnoJSb6SajQXQ5UT.eval  2026-06-17T18-56-30-00-00_meta-eval_hPS5JcZi4kjngAHWszTjec.eval  2026-06-17T19-26-11-00-00_generation-eval_QtkF5F77AvEvSK3usdVusc.eval  2026-06-17T19-26-36-00-00_meta-eval_c9VGr7TaiydK6MBhGPiWMk.eval  2026-06-17T19-36-58-00-00_meta-eval_acFEAvLhsderV9xEDamNZW.eval  2026-06-17T19-39-17-00-00_generation-eval_63yofPCZTTWNw44owpxC6y.eval
src/content_pipeline/: __init__.py  eval_task.py  fixtures.py  generator.py  goldset.py  grounding.py  models.py  prompt.py  report.py  scorers.py
tests/: test_decomposition.py  test_generator.py  test_grounding.py  test_manifest.py  test_real_generations.py  test_report.py
