[project]
name = "content-pipeline"
version = "0.1.0"
description = "Eval-first vacation-rental listing content generator"
requires-python = ">=3.13"
dependencies = [
    # Pinned exactly: `inspect view` log rendering is version-sensitive, so the
    # committed .eval logs must be read by the same version that wrote them.
    "inspect-ai==0.3.240",
    "anthropic>=0.40",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ipykernel>=6",
    "nbconvert>=7",
    "ipywidgets>=8",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
